--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -745,7 +745,7 @@ de:
           dialog name: "Hast du schon die Bibel App?"
           dialog desc: "Ich benutze die Bibel App sehr gern! Sie hat mir wirklich geholfen, die Bibel zu einem Teil meines Alltags zu machen. Ich kann Verse hervorheben, mir die Bibel anhören, Notizen machen, Lesepläne nutzen und sogar Videos anschauen! Lade sie dir jetzt gratis unter http://www.bible.com/app herunter."
         tw:
-          tweet: "Die Bibel App von @YouVersion hat einen festen Platz auf meinem Startbildschirm. Die Bibel lesen, anschauen, anhören und teilen - all dies in einer kostenlosen App: bible.com/app"
+          tweet: "Die gratis Bibel App von @YouVersion sitzt zum Lesen, Anschauen, Anhören und Teilen auf meinem Startbildschirm... bible.com/app"
         em:
           subject: "Hast du schon die Bibel App?"
           body: "Ich mag die Bibel App von YouVersion wirklich sehr und dachte, sie könnte dir vielleicht auch gefallen. Ich öffne die Bibel jetzt viel öfter. Die App macht es leicht, die Bibel zu lesen, die Videos anzuschauen und Verse zu teilen. Sie hat sogar Lesepläne, so dass ich jeden Tag ausgewählte Abschnitte lesen kann. \n\nDu kannst sie gratis für fast jedes mobile Gerät herunterladen:\nhttp://www.bible.com/app"
