--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -745,7 +745,7 @@ fr:
           dialog name: "Avez-vous la Bible App ?"
           dialog desc: "J'adore la Bible App ! Elle m'a vraiment aidé à faire de la Bible une partie essentielle de ma journée. Elle me permet de surligner, écouter des Bibles audios, prendre des notes, suivre des plans de lecture... et même regarder des vidéos ! Télécharge-là maintenant (c'est gratuit) : http://www.bible.com/app"
         tw:
-          tweet: "La Bible App de @YouVersion a un raccourci permanent sur mon écran d'accueil. Lire, regarder, écouter et partager... le tout dans une app gratuite : bible.com/app"
+          tweet: "Bible App de @YouVersion demeure sur ma page d'accueil. Lire, regarder et partager. Tout dans une app gratuite: bible.com/app"
         em:
           subject: "Avez-vous la Bible App ?"
           body: "J'apprécie vraiment la Bible App de YouVersion et je pensais que tu pourrais l'apprécier aussi. J'ouvre beaucoup plus ma Bible ces temps-ci parce que c'est si simple de lire, regarder, écouter et partager. Il y a même des plans, avec une sélection de passages bibliques à lire qui m'attendent chaque jour. \n\nTu peux la trouver (gratuitement !) pour pratiquement tout type d'appareil mobile ici :\nhttp://www.bible.com/app"
