--- a/config/locales/mk.yml
+++ b/config/locales/mk.yml
@@ -745,7 +745,7 @@ mk:
           dialog name: "Дали ја имате апликацијата „Библија“?"
           dialog desc: "Ептен ми се допаѓа апликацијата „Библија“! Навистина ми има помогнато да ја направам Библијата дел од моето секојдневие. Можам да нагласувам, подвлекувам, обележувам, можам да слушам Библијата во аудио формат, можам да си пишувам белешки, да следам Планови за читање... дури можам и да гледам видеа! Преземи ја тука (бесплатна е): http://www.bible.com/app"
         tw:
-          tweet: "Апликацијата „Библија“ од @YouVersion има постојано место на мојот екран. Читај, гледај, слушај и споделувај... сето тоа во една бесплатна апликација: bible.com/app"
+          tweet: "Читај, гледај, слушај и споделувај ја Библијата од @YouVersion бесплатно на:  bible.com/app"
         em:
           subject: "Дали ја имате апликацијата „Библија“?"
           body: "Веќе некое време ѝ се радувам на апликацијата „Библија“ од YouVersion и мислам дека и на тебе многу ќе ти се допадне. Ја читам Библијата многу повеќе од порано, бидејќи е толку едноставна за читање, слушање, гледање и споделување. Има дури и Планови за читање, кои содржат селекција од Библијата во вид на дневно четиво сервирано за мене секојдневно.\n\nМожеш да ја преземеш (бесплатно!) од тука, за речиси сите мобилни уреди:\nhttp://www.bible.com/app"
