--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -745,7 +745,7 @@ pl:
           dialog name: "Masz już Aplikację Biblii?"
           dialog desc: "Kocham tę Aplikację Biblii! Naprawdę pomogła mi uczynić Biblię częścią mojego życia. Mogę zakreślać, słuchać wersji audio, robić notatki, rozważać z planem czytania... a nawet oglądać materiały wideo! Pobierz już teraz (jest za darmo): http://www.bible.com/app"
         tw:
-          tweet: "Aplikacja Biblii YouVersion ma stałe miejsce na moim ekranie. Czytaj, oglądaj, słuchaj i udostępniaj...wszystko za darmo: bible.com/app"
+          tweet: "Biblii @YouVersion ma stałe miejsce na moim ekranie. Czytaj, oglądaj, słuchaj i udostępniaj...wszystko za darmo: bible.com/app"
         em:
           subject: "Masz już Aplikację Biblii?"
           body: "Bardzo lubię Aplikację Biblii YouVersion i myślę, że Tobie też może się spodobać. Używam tej Biblii coraz częściej - jest łatwa do czytania, oglądania, słuchania i dzielenia się z innymi. Możesz tam znaleźć plany czytania, dzięki którym każdego dnia będziesz miał przygotowany odpowiedni dla siebie fragment. \n\n Aplikację Biblii możesz mieć (za darmo!) na prawie każdym urządzeniu, zobacz: \n http://www.bible.com/app"
