--- a/config/locales/pt-PT.yml
+++ b/config/locales/pt-PT.yml
@@ -738,14 +738,14 @@ pt-PT:
     100m:
       logo: "YouVersion: A app da Bíblia"
       tagline: "Tem início nos <em>100 milhões</em>"
-      intro: "Poderá a App da Bíblia atingir os 100 milhões de instalações antes do nosso 5º aniversário em 10 de Julho? Só com a sua ajuda!"
+      intro: "Poderá a App da Bíblia atingir os 100 milhões de instalações antes do nosso 5º aniversário a 10 de Julho? Só com a sua ajuda!"
       share:
         with friends: "Partilhe com os seus amigos"
         fb:
           dialog name: "Já tem a App da Bíblia?"
           dialog desc: "Gosto bastante da App da Bíblia! Ajudou-me realmente a fazer da Bíblia uma parte integrante da minha vida diária. Permite-me destacar versículos, ouvir a Bíblia em áudio, criar notas, subscrever planos devocionais... até ver vídeos! Descarregue-a agora (é grátis): http://www.bible.com/app"
         tw:
-          tweet: "A App da Bíblia do @YouVersion tem lugar permanente no meu ecrã inicial. Leia, veja, escute e partilhe...tudo numa app grátis: bible.com/app"
+          tweet: "App da Bíblia do @YouVersion com lugar fixo no meu ecrã inicial. Leia, veja, oiça e partilhe... tudo numa app grátis: bible.com/app"
         em:
           subject: "Já instalou a App da Bíblia?"
           body: "Tenho desfrutado da App da Bíblia do YouVersion e acho que também irá gostar. Consulto a Bíblia muitas mais vezes estes últimos dias e isso deve-se à facilidade de a ler, ver, escutar e partilhar. Dispõe inclusive de Planos de leitura, com uma seleção de trechos bíblicos preparados para as minhas leituras diárias.\n\nPode descarregá-la (grátis!) para quase todos os dispositivos móveis aqui: \nhttp://www.bible.com/app"
