--- a/config/locales/sq.yml
+++ b/config/locales/sq.yml
@@ -745,7 +745,7 @@ sq:
           dialog name: "A e ke Programin e Biblës?"
           dialog desc: "Mua më pëlqen shumë Programi i Biblës! Vërtet më ka ndihmuar ta bëj Biblën pjesë të jetës së përditshme. Më mundëson të theksoj vargje, ta dëgjoj Biblën në audio, të mbaj shënime, të ndjek plane devocionale...madje të shikoj video! Shkarkoje tani (është falas): http://www.bible.com/app"
         tw:
-          tweet: "Programi i Biblës nga @YouVersion ka një vend të përhershëm në ekranin tim. Lexo, shiko, dëgjo dhe ndaj... të gjitha në një program falas: bible.com/app"
+          tweet: "Programi i Biblës nga @YouVersion ka vend të përhershëm në ekranin tim. Lexo, shiko, dëgjo dhe ndaj...gjithçka falas: bible.com/app"
         em:
           subject: "A e ke Programin e Biblës?"
           body: "Kam qenë duke gëzuar Programin e Biblës nga YouVersion dhe mendova që do ta pëlqesh edhe ti. E kam hapur Biblën më shumë këto ditë duke qenë se është aq e lehtë për t'u lexar, shikuar, dëgjuar dhe ndarë. Madje ka Plane, që kanë një përzgjedhje të vargjeve biblike dhe që më presin çdo ditë.\n\nTi mund ta kesh këtë (falas!) për pothuaj çdo pajisje të lëvizshme këtu: http://www.bible.com/app"
