--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -1,8 +1,8 @@
 uk:
   social:
     email: "Ел.пошта"
-    twitter: "Twitter"
-    facebook: "Facebook"
+    twitter: "Твіттер"
+    facebook: "Фейсбук"
   api:
     users agree bool: "Вам необхідно погодитися з умовами та правилами для створення облікового запису."
     users confirm password matches: "Нові паролі не збігаються."
@@ -745,7 +745,7 @@ uk:
           dialog name: "У вас є програма Біблія?"
           dialog desc: "Я люблю програму Біблія! Вона дійсно допомогла мені зробити Біблію частиною мого повсякденного життя. Вона дозволяє мені виділяти, слухати аудіо Біблії, робити нотатки, виконувати присвячені плани ... навіть дивитися відео! Перейдіть для її завантаження прямо зараз (це безкоштовно): http://www.bible.com/app"
         tw:
-          tweet: "Програма Біблія від @YouVersion має постійне місце в моєму домашньому екрані. Читайте, дивіться, слухайте і діліться ... все у безкоштовній програмі: bible.com/app"
+          tweet: "Біблія @YouVersion завжди на моєму екрані. Читай, дивись, слухай, обмінюйся - все у безкоштовній програмі: bible.com/app"
         em:
           subject: "У вас є програма Біблія?"
           body: "Я насолоджуюся програмою Біблія від YouVersion і думаю Вам також вона сподобається. Я відкриваю Біблію багато частіше в ці дні, тому що це так легко читати, дивитися, слухати і ділитися. Вона має навіть плани, які мають відібрані частини Біблії і чекають на мене кожен день.\n\n  Ви можете отримати її (безкоштовно!) майже для кожного мобільного пристрою тут:\n  http://www.bible.com/app"
