--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -21,7 +21,7 @@ zh-CN:
     users username required: "请务必输入用户名。"
   meta:
     100million:
-      title: "从1 亿开始"
+      title: "从一亿开始"
       description: "圣经软件的安装量几乎达到1亿次，这真是一个不可思议的里程碑！但是我们才刚刚开始。下载免费的圣经软件，然后与朋友们分享这个软件，让我们一起开创历史。"
     mobile:
       title: "圣经软件"
@@ -737,8 +737,8 @@ zh-CN:
   campaigns:
     100m:
       logo: "YouVersion: 圣经软件"
-      tagline: "从<em>1亿</em>开始"
-      intro: "在7月10日，我们的五周年庆之前，圣经软件可以达到1亿份的安装量吗？全靠您的支持了！"
+      tagline: "从<em>一亿</em>开始"
+      intro: "在7月10日，我们的五周年庆之前，圣经软件可以达到一亿次的安装量吗？全靠您的支持了！"
       share:
         with friends: "与您的朋友分享"
         fb:
@@ -751,9 +751,9 @@ zh-CN:
           body: "我很喜欢使用 YouVersion 的圣经软件，我想你也会喜欢的。不管是阅读，看视频，听录音或分享经文，这个圣经软件都很好用，所以现在我接触圣经的次数也更多了。圣经软件甚至还包括了读经计划，可将经文有选择的挑出来，供我每天阅读。⏎\n⏎\n圣经软件支持几乎任何移动设备，你可以从这里 ( 免费! ) 安装：http://www.bible.com/app"
       body:
         p1: "7月10日将是一个大日子，它不仅是圣经软件诞生五周年，这也是苹果公司的iTunes商店开张五周年。"
-        p2: "还要更大？有了您的帮助，这将会是圣经软件将达到1亿次下载量的那一天。"
-        p3: "我们都知道神会使用类似的里程碑来推动更大的增长。"
-        p4: "让我们一起来开创历史"
+        p2: "您敢想像吗？您再给力一下，这一天也将成为圣经软件达到一亿次安装量的重要纪念日！"
+        p3: "我们明白神在使用这样的里程碑去推动更大的增长。"
+        p4: "让我们一起来开创历史!"
       ad:
-        title: "圣经软件是一个非常好，并且完全免费的圣经研读工具。"
-        copy: "阅读，看视频，听录音或分享经文。请立刻下载圣经软件到您的智能手机或平板电脑上: <a href='http://bible.com/app'>Download Now</a>"
+        title: "圣经软件完全免费，是一款非常棒的帮助探索圣言的工具。"
+        copy: "阅读，看视频，听录音或分享经文。请立刻下载圣经软件到您的智能手机或平板电脑上: <a href='http://bible.com/app'>立即下载</a>"
