--- a/config/locales/zh-TW.yml
+++ b/config/locales/zh-TW.yml
@@ -750,10 +750,10 @@ zh-TW:
           subject: "您有使用聖經軟體嗎？"
           body: "我很喜歡使用 YouVersion 的聖經軟體，我想您也會喜歡的。不管是閱讀、看視訊、聽音訊或分享經文，聖經軟體都很容易使用，因此現在我接觸聖經的次數也更多了。聖經軟體也包括了讀經計劃，每天備有一系列的精選經文供我閱讀。\n\n您可以從這裡把軟體下載和安裝 (免費的！) 到幾乎任何款式的行動設備上:\nhttp://www.bible.com/app"
       body:
-        p1: "7月10號是個大日子。不單是聖經軟體的5週年，更是蘋果公司的iTunes Store誕生了5年了。"
-        p2: "還要更大？有了您的幫助，這將會是聖經軟體將達到1億次下載量的那一天。"
+        p1: "7月10日將是一個大日子，它不僅是聖經軟體誕生五周年，這也是蘋果公司的iTunes商店開張五周年。"
+        p2: "您敢想像嗎？您再給力一下，這一天也將成為聖經軟體達到1億次下載量的重要紀念日！"
         p3: "我們知道到神利用好像這一個的里程碑去推動更大增長。"
-        p4: "讓我們一同創造歷史。"
+        p4: "讓我們一同來創造歷史!"
       ad:
-        title: "聖經軟體是完全免費和是一個很棒的方式來探索聖經。"
+        title: "聖經軟體完全免費，是一款非常棒的幫助探索聖言的工具。"
         copy: "閱讀、看視訊、聽音訊或分享經文。下載聖經軟體到你的智能電話或平板電腦：<a href='http://bible.com/app'>即時下載</a>"
