--- a/config/locales/es-ES.yml
+++ b/config/locales/es-ES.yml
@@ -1,4 +1,8 @@
 es-ES:
+  social:
+    email: "Correo electrónico"
+    twitter: "Twitter"
+    facebook: "Facebook"
   api:
     users agree bool: "Debes estar de acuerdo con los términos y condiciones para crear una cuenta."
     users confirm password matches: "Las contraseñas nuevas no coinciden."
@@ -15,6 +19,13 @@ es-ES:
     users username not available: "El nombre de usuario que solicitaste no está disponible."
     users username or password invalid: "El nombre de usuario o contraseña que has proporcionado no es válido."
     users username required: "Debes introducir un nombre de usuario."
+  meta:
+    100million:
+      title: "Arranca con 100 millones"
+      description: "La Biblia App se ha instalado casi de 100 millones de veces - ¡un hito increíble! Pero apenas estamos empezando. Descargua la Biblia App gratis hoy mismo - y comparte la aplicación con tus amigos. Vamos a hacer historia juntos."
+    mobile:
+      title: "La Biblia App"
+      description: "Diez millones de personas están usado la Biblia App para leer, escuchar, visualizar y compartir la Palabra de Dios, haciéndola parte de su vida cotidiana. Descarga gratuitamente la aplicación y accede a tus destacados, notas, y planes de lectura desde cualquier parte. Disfruta de cientos de versiones, incluyendo audio, todo en tu dispositivo móvil."
   now: "Ahora"
   celebrating 50MM: "¡Celebrando 50 millones de instalaciones!"
   link: "Enlace"
@@ -42,6 +53,7 @@ es-ES:
   deleted connection error: "Lo sentimos, un error ha ocurrido al intentar eliminar tu conexión a %{connection}."
   remove connection: "Eliminar"
   connection users: "Aquí hay algunos usuarios de YouVersion a los que estás conectado en %{connection}:"
+  connection marketing: "YouVersion se disfruta más con los amigos! Vincula tu cuenta de YouVersion a tus otras redes sociales y encuentra al instante a tus amigos en YouVersion. Al vincular tus cuentas también te permite compartir contenido con apenas unos pocos clics. Nunca vamos a publicar nada sin tu aprobación."
   next step connections: "Siguiente: Vincula tus cuentas y encuentra a tus amigos."
   no notes found: "%{username} no tiene ninguna nota."
   no recent activity: "%{username} no ha tenido actividad reciente."
@@ -275,7 +287,7 @@ es-ES:
       information use title: "¿Cómo usamos tu información?"
       information use text: "Cuando te registras para un servicio en particular, te pediremos información personal. Si LifeChurch.tv quiere usar esta información para un propósito diferente para la cual ha sido destinada, entonces te pediremos tu consentimiento de antemano. Puedes rechazar enviar información personal a cualquiera de nuestros servicios, en ese caso no podremos proveerte de esos servicios."
       information security title: "¿Cómo protegemos tu información?"
-      information security text: "LifeChurch.tv no comparte tu información personal con otras instituciones fuera de LifeChurch.tv sin tu consentimiento explícito. LifeChurch.tv compartirá tu información personal sólo si se tiene certeza de lealtad que el acceso, uso, preservación o divulgación de tal información es razonablemente necesaria para (a) satisfacer cualquier ley de acuerdo, regulación, proceso legal o cumplimiento exigido por el gobierno, (b) cumplimiento aplicable  a los Términos de Uso, incluido el de investigación del apartado de violaciones potenciales, (c) detectar, prevenir, o de lo contrario fraude de dirección, seguridad o problemas técnicos, o (d) proteger contra daño inminente a los derechos, propiedad o seguridad de LifeChurch.tv, sus usuarios o el público exigido o permitido por ley. LifeChurch.tv toma apropiadas medidas de seguridad para protegerse contra el acceso desautorizado o modificación desautorizada, divulgación o destrucción de la base de datos, incluyendo la revisión interna de nuestra colección de base de datos, prácticas de almacenamiento y procesamiento y medidas de seguridad, así como medidas de seguridad físicas para proteger contra el acceso desautorizado al sistema donde almacenamos los datos personales. A menos que se obtenga permiso explícito, LifeChurch.tv restringe el acceso a información personal a sus empleados, contratistas y agentes que necesitan saber tal información para controlar, desarrollar o mejorar nuestros servicios. Estas personas están limitadas por obligaciones de confidencialidad y tienes que estar sujetos a disciplina, incluida la expulsión o persecución criminal, si ellos no cumplen estas obligaciones."
+      information security text: "LifeChurch.tv no comparte su información personal con otras instituciones ajenas a LifeChurch.tv sin su consentimiento explícito.  LifeChurch.tv puede compartir su información personal sólo en aquellos casos en que bajo la creencia de buena fe, el acceso, uso, preservación o divulgación sea razonablemente necesario para (a) cumplir con leyes, regulaciones, procesos legales o peticiones gubernamentales aplicables, (b ) hacer cumplir las Condiciones de Uso, incluyendo la investigación de posibles violaciones de los mismos, (c) detectar, prevenir o gestionar el fraude, los temas de seguridad o técnicos, o (d) proteger contra daños inminentes a los derechos de propiedad o seguridad de LifeChurch.tv , sus usuarios o el público según se requiera y permita la ley. LifeChurch.tv toma las medidas de seguridad apropiadas para proteger en contra del acceso no autorizado o la alteración, divulgación o destrucción de datos, incluyendo revisiones internas de nuestras bases de datos, prácticas de almacenamiento y procesamiento y medidas de seguridad, así como medidas de seguridad físicas para proteger contra el acceso no autorizado a los sistemas en los que almacenamos la información personal. A menos que se obtenga permiso explícito suyo, LifeChurch.tv restringe el acceso a la información personal a sus empleados, contratistas y agentes que necesitan conocer dicha información para operar, desarrollar o mejorar nuestros servicios. Estas personas están sujetas a obligaciones de confidencialidad y pueden estar sujetos a medidas disciplinarias, incluyendo el despido y el enjuiciamiento penal, en el caso de no  cumplir con estas obligaciones."
       data integrity title: "Integridad de los datos"
       data integrity text: "LifeChuch.tv controla nuestra colección de base de datos, almacenamiento y proceso de ejecución para asegurar que sólo nosotros acumulamos, almacenamos y procesamos la información personal necesitada para suministrar o mejorar nuestros servicios. Tomamos pasos razonables para asegurar que la información personal que procesamos es precisa, y actual, pero dependemos de nuestros usuarios para actualizar o corregir su información personal siempre que lo requieran."
       information access title: "Accediendo y actualizando información personal"
@@ -719,3 +731,29 @@ es-ES:
     public domain: "Dominio público"
     loading: "Cargando más versiones..."
     load error: "Lo sentimos, ha ocurrido un problema al cargar más versiones. Cierra el menú y vuélvelo a abrir para intentarlo de nuevo."
+  reader help:
+    title: "Selecciona un versículo..."
+    line 1: "Haz clic o toca en cualquier versículo o colección de versículos para añadir a marcadores, resaltar, crear una nota, o compartir con tus amigos!"
+  campaigns:
+    100m:
+      logo: "YouVersion: La aplicación de la Biblia"
+      tagline: "Arranca con <em>100 milliones</em>"
+      intro: "¿Alcanzará la Biblia App las 100 millones de instalaciones antes de su 5to aniversario el 10 de julio? ¡Sólo con tu ayuda!"
+      share:
+        with friends: "Comparte con tus amigos"
+        fb:
+          dialog name: "¿Tienes la Biblia App?"
+          dialog desc: "Me encanta la Biblia App! Hacer la Biblia parte de mi vida diaria realmente me ha ayudado. Me permite resaltar, escuchar las Biblias en audio, tomar notas, seguir los planes devocionales ... e incluso ver videos! Descárgala ahora (es gratis): http://www.bible.com/app"
+        tw:
+          tweet: "La Biblia App merece estar en tu menú principal. Lee, ve, escucha y comparte... todo gratis: bible.com/app"
+        em:
+          subject: "¿Tienes la Biblia App?"
+          body: "Estoy disfrutando con la Biblia App de YouVersion y pienso que también te gustará. Abro la Biblia mucho más ahora porque es muy fácil de leer, visualizar, escuchar y compartir. Incluso tiene Planes de lectura, y una selección de textos de la Biblia lista esperándome cada día.\n\nPuedes obtenerla (gratis) para cualquier dispositivo móvil aquí:\nhttp://www.bible.com/app"
+      body:
+        p1: "El 10 de Julio será un gran día. No sólo porque es el 5to aniversario de la Biblia App, sino también porque se cumplen 5 años desde el lanzamiento de la tienda Apple’s iTunes Store."
+        p2: "¿Pero aún más grande? Con tu ayuda, será el día en que la Biblia App alcanzará las 100 millones de descargas."
+        p3: "Hemos aprendido que Dios usa hitos como éste para impulsar un crecimiento aún mayor."
+        p4: "Hagamos la historiya juntos."
+      ad:
+        title: "La Biblia App es completamente gratuita y una gran manera de explorar la Biblia."
+        copy: "Lee, escucha, visualiza, comparte. Obtén Bible App para tu smartphone o tablet: <a href='http://bible.com/app'>Descargar ahora</a>"
