--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,6 +1,6 @@
 es:
   social:
-    email: "Correo electrónico"
+    email: "Email"
     twitter: "Twitter"
     facebook: "Facebook"
   api:
@@ -614,7 +614,7 @@ es:
     contact header: "Información de Contacto"
     contact header 2: "YouVersion en Internet"
     phone: "Teléfono"
-    email: "Correo Electrónico"
+    email: "Email"
     blog: "Blog de YouVersion"
     facebook: "YouVersion en Facebook"
     twitter: "YouVersion en Twitter"
@@ -745,7 +745,7 @@ es:
           dialog name: "¿Tiene instalada la Biblia App?"
           dialog desc: "¡Me gusta mucho la Biblia App! Me ha ayudado a hacer de la Biblia parte de mi vida diaria.  Me permite resaltar versículos, escuchar Audio-Biblias, hacer notas, seguir Planes de Lectura…!y hasta ver videos! Descárguela ahora mismo (es gratis): http://www.bible.com/descargar"
         tw:
-          tweet: "La Biblia App de @YouVersion tiene un lugar permanente en mi pantalla principal.  Lea, vea, escuche y comparta…todo en un App gratuita: bible.com/es/app"
+          tweet: "La Biblia App de @YouVersion tiene un lugar permanente en mi pantalla. Lea, vea, escuche y comparta: http://bible.com/es/app"
         em:
           subject: "¿Tiene instalada la Biblia App?"
           body: "He disfrutado de la Biblia App y pensé que le gustaría también.  He estado leyendo la Biblia mucho más que antes porque es muy fácil de leer, ver, escuchar y compartir.  Cuenta con Planes de Lectura, los cuales tienen una selección de pasajes y versículos que esperan por mi cada día.\n\nEs gratis y puede descargarla, casi a cualquier dispositivo móvil, aquí:\nhttp://www.bible.com/descargar"
