--- a/config/locales/id.yml
+++ b/config/locales/id.yml
@@ -745,7 +745,7 @@ id:
           dialog name: "Apakah anda memiliki Aplikasi Alkitab?"
           dialog desc: "Saya suka Aplikasi Alkitab! Itu benar-benar membantu saya menjadikan Alkitab bagian kehidupan keseharian saya. Mengizinkan saya menyorot, mendengarkan Alkitab audio, membuat catatan, mengikuti program renungan...bahkan menonton video! Ayo unduhlah sekarang (gratis): http://www.bible.com/app"
         tw:
-          tweet: "Aplikasi Alkitab dari @YouVersion mempunyai tempat tetap di layar utama saya.  Baca, lihat, dengar, dan bagikan...semua tersedia dalam aplikasi gratis:bible.com/app"
+          tweet: "Bible App dari @YouVersion ada di hp saya. Baca, tonton, dengar & bagikan. Semua dalam satu aplikasi gratis:bible.com/app"
         em:
           subject: "Apakah anda memiliki Aplikasi Alkitab?"
           body: "Saya menikmati Ap Alkitab dari YouVersion dan berpikir mungkin anda juga akan menyukainya. Saya lebih sering membuka Alkitab hari-hari ini karena itu sangat mudah dibaca, ditonton, didengar, dan dibagikan. Itu bahkan memiliki Program, yang mencakup pilihan dari Alkitab semuanya terpilih dan menanti saya setiap harinya. \n\n Anda dapat mendapatkannya (gratis!) untuk hampir semua piranti bergerak di sini: \n http://www.bible.com/app"
