--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -25,7 +25,7 @@ pt-BR:
       description: "O App da Bíblia foi instalado quase 100 milhões de vezes - um marco incrível! Mas estamos apenas começando. Faça o download do aplicativo gratuito da Bíblia hoje - e, em seguida, compartilhe o aplicativo com seus amigos. Juntos vamos fazer história."
     mobile:
       title: "O App da Bíblia"
-      description: "Milhões de pessoas estão usando o App da Bíblia para ler, ouvir, assistir e compartilhar a Palavra de Deus, tornando-a uma parte de suas vidas diárias. Faça o download do aplicativo gratuito e acesse seus marcadores, anotações e Planos de Leitura de qualquer lugar. Desfrute de centenas de versões, incluindo áudio, tudo isso em seu dispositivo móvel."
+      description: "Milhões de pessoas estão usando o App da Bíblia para ler, ouvir, assistir e compartilhar a Palavra de Deus, tornando-a parte de suas vidas diárias. Faça o download do aplicativo gratuito e acesse seus marcadores, anotações e Planos de Leitura de qualquer lugar. Desfrute de centenas de versões, incluindo áudio, tudo isso em seu dispositivo móvel."
   now: "Agora"
   celebrating 50MM: "Comemorando 50 milhões de instalações!"
   link: "Link"
@@ -466,7 +466,7 @@ pt-BR:
     do you want to reset: "Deseja refazer?"
     catch up text: "Reverta a leitura de hoje para a última leitura concluída (day % {last_completed_day} do plano)."
     catch up description only: "Se você se atrasar nas suas leituras, não se preocupe! Você sempre pode voltar para a sua última leitura concluída."
-    catch me up: "Reverter Leitura"
+    catch me up: "Manter-me em Dia"
     restart description: "Você pode reiniciar o seu plano. Todo o seu histórico e progresso de leitura será redefinido e reiniciado do começo."
     restart: "Reiniciar o Plano"
     privacy description: "A escolha é sua. Você quer que as pessoas vejam que você está lendo esse plano?"
@@ -737,15 +737,15 @@ pt-BR:
   campaigns:
     100m:
       logo: "YouVersion: O app da Bíblia"
-      tagline: "Começa em <em>100 milhões</em>"
+      tagline: "Começa com <em>100 milhões</em>"
       intro: "O App da Bíblia alcançará 100 milhões de instalações antes de nosso 5º aniversário em 10 de Julho? Somente com a sua ajuda!"
       share:
         with friends: "Compartilhe com seus amigos"
         fb:
           dialog name: "Você tem o App da Bíblia?"
-          dialog desc: "Eu amo o App da Bíblia! Ele realmente me ajudou a fazer a Bíblia parte da minha vida diária. Ele me permite destacar, ouvir Bíblias em áudio, criar notas, seguir planos devocionais... até assistir vídeos! Faça o download agora (é grátis): http://www.bible.com/app"
+          dialog desc: "Eu amo o App da Bíblia! Ele realmente me ajudou a tornar a Bíblia parte da minha vida diária. Ele me permite destacar, ouvir Bíblias em áudio, criar anotações, seguir planos devocionais... até assistir vídeos! Faça o download agora (é grátis): http://www.bible.com/app"
         tw:
-          tweet: "O App da Bíblia @YouVersion é um ícone fixo na minha tela inicial. Leia, assista, ouça e compartilhe...tudo num app gratuito: bible.com/app"
+          tweet: "O App da Bíblia @YouVersion está sempre na minha tela inicial. Leia, assista, ouça e compartilhe: bible.com/app"
         em:
           subject: "Você tem o App da Bíblia?"
           body: "Eu curti o App da Bíblia do Youversion e achei que você pudesse curtir também. Estou abrindo a Bíblia muito mais esses dias porque é fácil de ler, assistir, ouvir e compartilhar. Tem até planos de leitura, que trazem uma seleção de versículos todos os dias. \n\nVocê pode baixar (grátis!) para praticamente qualquer dispositivo móvel aqui:\nhttp://www.bible.com/app"
