New strings and minor updates on home page.

--- a/config/locales/af.yml
+++ b/config/locales/af.yml
@@ -757,3 +757,6 @@ af:
       ad:
         title: "Die Bybel App is heeltemal gratis en fantastiese wyse om die Bybel te ontdek."
         copy: "Lees, Luister, Kyk of Deel.  Kry die Bybel App vir jou slim telefoon of tablet: <a href='http://bible.com/app'>Laai hom nou af</a>"
+      sidebar:
+        tagline: "Kom ons maak Geskiedenis. "
+        button: "Deel die Bible App. "
