--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -750,3 +750,6 @@ bg:
       ad:
         title: "Приложение Библията е напълни безплатно и е прекрасен начин за иследване на Писанието."
         copy: "Чети, Слушай, Гледай, Споделяй. Вземи приложение Библията за твоя смартфон или таблет: <a href='http://bible.com/app'>Свали сега</a> "
+      sidebar:
+        tagline: "Нека създадем история!"
+        button: "Сподели Библията"
