--- a/config/locales/id.yml
+++ b/config/locales/id.yml
@@ -757,3 +757,6 @@ id:
       ad:
         title: "Aplikasi Alkitab sepenuhnya gratis dan merupakan cara terhebat untuk menjelajahi Alkitab."
         copy: "Baca, Dengarkan, Tonton, Bagikan. Dapatkan Ap Alkitab untuk ponsel atau tablet anda: <a href='http://bible.com/app'>Unduh Sekarang</a>"
+      sidebar:
+        tagline: "Mari kita mengukir sejarah bersama."
+        button: "Bagikan Bible App"
