--- a/config/locales/km.yml
+++ b/config/locales/km.yml
@@ -733,3 +733,8 @@ km:
           dialog name: "តើអ្នកមានកម្មវិធីព្រះគម្ពីរដែរឬទេ?"
         em:
           subject: "តើអ្នកមានកម្មវិធីព្រះគម្ពីរដែរឬទេ?"
+      body:
+        p4: "តោះ យើង​បង្កើត​ប្រវត្តិសាស្ត្រ​ជាមួយ​គ្នា។"
+      sidebar:
+        tagline: "តោះ យើង​បង្កើត​ប្រវត្តិសាស្ត្រ​ជាមួយ​គ្នា។"
+        button: "ចែកចាយ​កម្មវិធី​ព្រះ​គម្ពីរ"
