--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -757,3 +757,6 @@ ko:
       ad:
         title: "성경 앱은 말씀과 동행하게 해주는 아주 훌륭한 무료 앱입니다."
         copy: "읽고, 듣고, 보고, 공유하세요. 여러분의 스마트폰이나 타블렛에 성경 앱을 설치하세요. : <a href='http://bible.com/app'>지금 다운로드 하세요.</a>"
+      sidebar:
+        tagline: "역사를 함께 만들어 나가요."
+        button: "성경 앱을 공유해 주세요."
