--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -757,3 +757,6 @@ ru:
       ad:
         title: "Приложение Библия полностью бесплатно и идеально подходит для изучения Библии."
         copy: "Читайте, слушайте, смотрите, делитесь. Приложение Библия для смартфонов и планшетов: <a href='http://bible.com/app'>Загрузить прямо сейчас</a>"
+      sidebar:
+        tagline: "Давайте творить историю вместе!"
+        button: "Поделиться приложением"
