--- a/config/locales/sk.yml
+++ b/config/locales/sk.yml
@@ -757,3 +757,6 @@ sk:
       ad:
         title: "Aplikácia Biblia je úplne bezplatná a skvelá cesta ako preskúmať Bibliu."
         copy: "Čítajte, počúvajte, pozerajte, zdieľajte. Stiahnite si aplikáciu Biblia pre váš smartfón alebo tablet: <a href='http://bible.com/app'>Stiahnuť teraz</a>"
+      sidebar:
+        tagline: "Poďme spolu tvoriť dejiny."
+        button: "Zdieľajte aplikáciu Biblia"
