--- a/config/locales/uk.yml
+++ b/config/locales/uk.yml
@@ -757,3 +757,6 @@ uk:
       ad:
         title: "Програма Біблія повністю безкоштовна і це прекрасний шлях для вивчення Біблії."
         copy: "Читайте, Слухайте, Дивіться, Обмінюйтеся. Отримайте програму Біблія для вашого смартфону чи планшету: <a href='http://bible.com/app'>Завантажте зараз</a>"
+      sidebar:
+        tagline: "Створюймо історію разом."
+        button: "Поділитися Біблією"
