--- a/config/locales/ro.yml
+++ b/config/locales/ro.yml
@@ -757,3 +757,6 @@ ro:
       ad:
         title: "Aplicația Biblia este complet gratuită și un mod minunat de a explora Biblia."
         copy: "Citește, vizionează, ascultă, împărtășește. Obține Aplicația Biblia pentru smartphone sau tabletă: <a href='http://bible.com/app'>Descarcă acum</a>"
+      sidebar:
+        tagline: "Să facem istorie împreună."
+        button: "Împărtășește Aplicația Biblia"
